@@ -1,0 +1,1 @@
+debian/bitmp/usr/lib/*.so.*	usr/lib32
