@@ -1,4 +1,4 @@
 usr/include
-usr/lib/*/libasound.so
+usr/lib/*/*.so
 usr/lib/*/pkgconfig
 usr/share/aclocal
